--- a/app/src/main/res/layout/footer_load_state.xml
+++ b/app/src/main/res/layout/footer_load_state.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
@@ -10,10 +11,10 @@
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:progressTint="@color/red"
         android:indeterminate="true"
+        android:indeterminateTint="@color/textColorAccent"
         android:indeterminateTintMode="src_atop"
-        android:indeterminateTint="@color/textColorAccent"/>
+        android:progressTint="@color/red" />
 
     <TextView
         android:id="@+id/tv_error"
