--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Text Size -->
     <dimen name="text_size_default">15sp</dimen>
     <dimen name="text_size_large">18sp</dimen>
     <dimen name="text_size_larger">25sp</dimen>
+
+    <!-- Padding -->
     <dimen name="padding_item">5dp</dimen>
     <dimen name="padding_default">10dp</dimen>
+
+    <!-- Margin -->
     <dimen name="margin_default">5dp</dimen>
     <dimen name="margin_large">10dp</dimen>
 </resources>
