--- a/app/src/main/res/layout/fragment_details_character.xml
+++ b/app/src/main/res/layout/fragment_details_character.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.details.DetailsCharacterFragment">
+    tools:context=".ui.characters.details.DetailsCharacterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
