--- a/app/src/main/res/layout/fragment_details_events.xml
+++ b/app/src/main/res/layout/fragment_details_events.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.details.DetailsEventFragment">
+    tools:context=".ui.events.details.DetailsEventFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
