--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/charactersFragment"
-        android:title="@string/nav_char"
-        android:icon="@drawable/ic_superhero" />
+        android:icon="@drawable/ic_superhero"
+        android:title="@string/nav_char" />
 
     <item
         android:id="@+id/seriesFragment"
-        android:title="@string/nav_series"
-        android:icon="@drawable/ic_series" />
+        android:icon="@drawable/ic_series"
+        android:title="@string/nav_series" />
 
     <item
         android:id="@+id/eventsFragment"
-        android:title="@string/nav_events"
-        android:icon="@drawable/ic_event" />
+        android:icon="@drawable/ic_event"
+        android:title="@string/nav_events" />
 </menu>
