--- a/app/src/main/res/layout/item_details.xml
+++ b/app/src/main/res/layout/item_details.xml
@@ -13,10 +13,10 @@
 
     <ImageView
         android:id="@+id/iv_item"
-        android:layout_width="100dp"
-        android:layout_height="110dp"
+        android:layout_width="@dimen/size_thumbnail_small"
+        android:layout_height="@dimen/size_thumbnail_small"
+        android:contentDescription="@string/text_accessibility_thumbnail"
         android:scaleType="fitXY"
-        tools:ignore="ContentDescription"
         tools:src="@tools:sample/backgrounds/scenic" />
 
     <TextView
@@ -26,8 +26,8 @@
         android:layout_marginTop="@dimen/margin_default"
         android:ellipsize="end"
         android:gravity="center"
-        android:maxLines="2"
+        android:maxLines="1"
         android:textColor="@color/textColor"
         android:textSize="@dimen/text_size_default"
-        tools:text="@string/placeholder_title" />
+        tools:text="@string/text_placeholder_title" />
 </LinearLayout>
