--- a/app/src/main/res/layout/panel_load_state.xml
+++ b/app/src/main/res/layout/panel_load_state.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content">
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/pb_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -18,7 +18,7 @@
         android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/footer_text"
+        android:text="@string/text_footer_error"
         android:visibility="gone"
         tools:visibility="visible" />
 
@@ -26,7 +26,7 @@
         android:id="@+id/btn_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/footer_btn"
+        android:text="@string/text_retry"
         android:visibility="gone"
         tools:visibility="visible" />
 
@@ -34,7 +34,7 @@
         android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_results"
+        android:text="@string/text_error_no_results"
         android:visibility="gone"
         tools:visibility="visible" />
 </LinearLayout>
